# grafeo-loro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WORKLOG.md  repomix.config.json  worklog.md
.github/: ISSUE_4_TRACKER.md
.github/workflows/: ci.yml
benches/: README.md  core.rs
docs/: MIGRATION.md  advanced.md  core.md  grafeo-loro.architecture.md  grafeo-loro.project-structure.md  guide.contributor.md  guide.md  implementation-plan.md  overview.md
docs/critiques/: p2-hunt.md  p2-l1-devil.md  p2t2-hunt.md  p2t2-l1-devil.md  p2t3-hunt.md  p2t3-l1-devil.md  p4-hunt.md  p4-l1-devil.md  p5-hunt-2.md  p5-hunt.md  p5-l1-devil.md
docs/phase-6/: SUMMARY.md  architecture-diagram.mmd  fuzz-invariants.md  instrument-plan.md  p6-hunt.md  p6-l1-devil.md
docs/phase-7/: SUMMARY.md  gap-closure-l1-devil.md  gap-closure-l1-plan.md  p7-hunt.md
docs/traits/: README.md  anti-plenger.md  klemer-agents.md  plenger-traits.md  plonga-plongo-loop.md  repomix.md  sub-agents-traits.md
examples/: minimal_outliner.rs
examples/wasm-offline-queue/: Cargo.toml  README.md  index.html
examples/wasm-offline-queue/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: consistency.rs  gen_corpus.rs  lib.rs
scripts/: wasm_blackbox_qa.sh
src/: app.rs  config.rs  constants.rs  error.rs  lib.rs
src/bridge/: batcher.rs  grafeo_tx.rs  mod.rs  origin.rs  queue.rs  sync_engine.rs
src/compression/: mod.rs  wrapper.rs
src/ffi/: mod.rs
src/fts/: mod.rs
src/hydration/: mod.rs  parallel.rs  serial.rs  vector.rs
src/observability/: mod.rs
src/presence/: mod.rs  socket.rs
src/runtime/: mod.rs
src/sab/: mod.rs
src/schema/: edge.rs  mod.rs  tree.rs  vertex.rs
src/shadow/: mod.rs
src/storage/: memory.rs  mod.rs  traits.rs
src/telemetry/: health.rs  metrics.rs  mod.rs  traces.rs
src/tree_adapter/: mod.rs
src/types/: events.rs  ids.rs  mod.rs  presence.rs  values.rs
src/wasm/: mod.rs  queue.rs
tests/: compression_pure_rust.rs  core_observability.rs  ffi_merge.rs  graph_sync.rs  persistence_awareness.rs  queue_native.rs  queue_wasm.rs  wasm_runtime.rs
tests/integration/: main.rs  sync_echo.rs  tree_move_concurrency.rs
tests/unit/: builder_validation.rs  compression.rs  compression_payload.rs  hydrate_checkpoint.rs  main.rs  parallel_hydrate.rs  schema_roundtrip.rs  telemetry.rs  tree_move.rs  vector_embedding.rs  vector_offload.rs  vertex_builder.rs
