[package]
name = "grafeo-loro"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local-first, in-process, dual-store graph database with CRDT consensus (Loro) + execution (Grafeo)."
repository = "https://github.com/OndeHQ/grafeo-loro"
documentation = "https://docs.rs/grafeo-loro"
readme = "README.md"
keywords = ["crdt", "loro", "graph", "grafeo", "wasm"]
categories = ["database", "data-structures", "wasm"]
# MSRV — verified via `cargo msrv` against the dep tree. Pinned to 1.80
# because `loro = "1.13"` requires it and we use `core::cell::OnceCell`
# (stabilized 1.70) + `std::sync::OnceLock` (stabilized 1.70). The `wasm32`
# target adds no further constraint.
rust-version = "1.80"

# ============================================================================
# Feature gates (issue #1 item 7) — granular, default-off.
# ============================================================================
#
# Onde (the consumer) uses `--features bridge,batcher,compression,tree` for
# its WASM bundle. Native server builds use `--features full`.
#
# Dependency matrix per feature (audited against the dep tree):
#
#   bridge       → lorosurgeon, parking_lot, async-trait, thiserror, tracing
#   batcher      → bridge + tokio (sync, time)
#   compression  → lz4_flex, brotli, flate2 (all pure-Rust, WASM-safe)
#   tree         → bridge
#   storage      → async-trait
#   grafeo       → bridge + grafeo + grafeo-common + grafeo-engine (native only)
#   onnx         → grafeo + ort (C lib, native only)
#   webrtc       → webrtc-rs (native only)
#   telemetry    → opentelemetry, tracing
#   wasm         → wasm-bindgen, js-sys, web-sys, console_error_panic_hook (target-family = wasm only)
#   parallel     → rayon (off by default; WASM is single-threaded by default)
#   serde        → serde, serde_json
#   full         → grafeo + onnx + webrtc + tree + telemetry + parallel
#
# `default = []` per issue #1 mandate: a fresh `cargo add grafeo-loro` MUST
# pull in zero heavy native deps. The user opts in explicitly.

[features]
default = []
# `bridge` pulls `bincode` so the bincode-only FFI entry point
# `apply_loro_op_bytes` is available with the minimal hot-path contract.
# Note: bincode 1.x transitively requires `serde` core (the trait machinery)
# but does NOT pull `serde_json` (the JSON codec) — JSON is admin-only per
# ADR-010. Callers wanting `apply_loro_op_bytes` must also enable `serde`
# so `LoroOp`/`GraphValue` get their `Serialize`/`Deserialize` derives.
bridge = ["dep:bincode"]
batcher = ["bridge", "tokio/sync", "tokio/time"]
compression = ["dep:lz4_flex", "dep:brotli", "dep:flate2"]
tree = ["bridge"]
storage = []
grafeo = ["bridge", "dep:grafeo", "dep:grafeo-common", "dep:grafeo-engine"]
onnx = ["grafeo", "dep:ort"]
webrtc = ["dep:webrtc-rs"]
telemetry = ["dep:opentelemetry"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook"]
parallel = ["dep:rayon"]
serde = ["dep:serde", "dep:serde_json"]
# Issue #3 sub-issue 6: native FTS inverted index, SAB layout writer, shadow commits
fts = ["bridge"]
sab = ["bridge", "dep:js-sys", "dep:wasm-bindgen"]
shadow = ["bridge"]
# Issue #3 sub-issue 10: observability (queue state, fault injection, invariant checks)
observability = ["bridge"]
# ============================================================================
# Issue #4 secondary finding #2: fail-loud stubs for invented feature names
# ============================================================================
#
# Downstream consumers have been observed inventing `merge` / `awareness` /
# `persistence` feature names in their Cargo.toml. Older Cargo silently
# accepted unknown `--features` flags (no-op); newer Cargo warns but does
# not error. To fail loud and clear, we declare them as empty stubs here
# and emit a `compile_error!` in src/lib.rs pointing at the correct
# alternative.
#
# This is a breaking change (issue #4 "no backward compat" mandate).
# Consumers who relied on the silent no-op behavior will now get a hard
# compile error with a helpful message.
merge = []
awareness = []
persistence = []
full = ["grafeo", "batcher", "webrtc", "tree", "telemetry", "parallel", "compression", "storage", "serde", "fts", "sab", "shadow", "observability"]

# ============================================================================
# Dependencies — every dep is `optional = true` unless it is required by
# the `bridge` feature (the minimal hot-path contract). This is the issue
# #1 mandate: no transitive bloat into a fresh `cargo add grafeo-loro`.
# ============================================================================

[dependencies]
# --- Always-on (required by `bridge` minimal contract) ----------------------
# `loro` is the consensus-layer SSOT — always required; the crate has no
# purpose without it. Pinned to 1.13 per issue #1 item 5 to match Onde's
# current version. Loosened to `>=1.13, <2.0` for forward-compat.
loro = "1.13"
lorosurgeon = "0.2"
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"

# --- Optional: bridge batcher runtime ---------------------------------------
# Tokio is ONLY pulled when `batcher` is on. WASM users do NOT enable
# `batcher`; they use the trait-abstracted `Mailbox` instead (issue #1 item 2).
tokio = { version = "1", default-features = false, optional = true }

# --- Optional: parallel hydration ------------------------------------------
rayon = { version = "1.8", optional = true }

# --- Optional: compression codecs ------------------------------------------
# Issue #3 sub-issue 1: drop zstd-sys (C dep, breaks WASM), replace with
# pure-Rust brotli + flate2. Both compile cleanly on wasm32-unknown-unknown.
lz4_flex = { version = "0.11", optional = true }
brotli = { version = "7", optional = true, default-features = false, features = ["std"] }
flate2 = { version = "1", optional = true, default-features = false, features = ["rust_backend"] }

# --- Optional: serde-shaped admin APIs -------------------------------------
# Hot paths (>10 Hz) MUST use bincode or `&str`-shaped FFI per issue #1 item 6.
# `serde` is admin-only.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# --- Optional: grafeo execution layer (native only — WASM-incompatible) -----
grafeo = { version = "0.5", optional = true }
grafeo-common = { version = "0.5", optional = true }
grafeo-engine = { version = "0.5", optional = true }

# --- Optional: ONNX vector embeddings (native only) ------------------------
# ort 2.x is currently a release candidate on crates.io. Pin to RC for now.
# When ort 2.0 stable lands, loosen to `"2"`.
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }

# --- Optional: WebRTC transport (native only) ------------------------------
# webrtc 0.21 is not yet released on crates.io; pin to latest 0.20 RC. When
# 0.21 stable lands, loosen to `"0.21"`.
webrtc-rs = { version = "=0.20.0-rc.3", optional = true, package = "webrtc" }

# --- Optional: OpenTelemetry metrics + traces ------------------------------
opentelemetry = { version = "0.23", features = ["metrics", "trace"], optional = true }

# --- Optional: WASM bindings (target-family = wasm only) -------------------
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["MessageChannel", "MessagePort", "Window"] }
# `console_error_panic_hook` routes Rust panics to `console.error` in browser
# WASM builds. Pulled by the `wasm` feature; the `#[wasm_bindgen]` init hook
# `init_panic_hook` is gated by `target_family = "wasm"` so the dep is only
# referenced on actual WASM targets.
console_error_panic_hook = { version = "0.1", optional = true }

# --- Optional: bincode for hot-path FFI (issue #1 item 6) ------------------
bincode = { version = "1", optional = true }

# ============================================================================
# Target-specific dependencies (issue #3 sub-issue 1)
# ============================================================================
# `getrandom` (transitive dep via `rand` / `loro` / `brotli`) does not support
# `wasm32-unknown-unknown` by default. On WASM targets, enable the `wasm_js`
# feature so it routes through `js_sys::Math::random()` / `crypto.getRandomValues`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
# Issue #3 sub-issue 1 + issue #4: keep `rt-multi-thread` for native dev/test
# only. The `tokio` dev-dep itself (with `rt-multi-thread`) does NOT compile
# on `wasm32-unknown-unknown` — tokio emits a `compile_error!` if you try.
# So we gate the native-flavored tokio dev-dep behind a target cfg and let
# the wasm32-only dev-deps (see below) pull in `wasm-bindgen-test` instead.
#
# Production WASM consumers MUST NOT enable `batcher` (which is the only
# path that pulls tokio into the library's dep graph).
tracing-subscriber = "0.3"
# Criterion for `cargo bench` (issue #1 item 11). `default-features = false`
# drops `rayon` (which does not compile on `wasm32-unknown-unknown`) so the
# same dev-dep line works for both native and WASM bench targets.
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
# For WASM benchmarks, enable the `wasm-bindgen` engine (criterion uses
# `web-sys::Performance::now()` for timing in browser WASM builds). Swap the
# line above for:
# criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support", "wasm-bindgen"] }
# See `benches/README.md` for the full WASM bench runbook + known limitations.

# ============================================================================
# Target-specific dev-dependencies — native only (issue #4)
# ============================================================================
# `tokio` with `rt-multi-thread` does NOT compile on `wasm32-unknown-unknown`
# (tokio emits a `compile_error!("Only features sync,macros,io-util,rt,time
# are supported on wasm.")`). Gate it on `not(target_arch = "wasm32")` so
# `cargo test --target wasm32-unknown-unknown --test queue_wasm` works.
# `tempfile` uses std::fs APIs that are not available on wasm32 either.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "sync", "time"] }
tempfile = "3"

# ============================================================================
# Target-specific dev-dependencies (issue #4: WASM test runner)
# ============================================================================
# `wasm-bindgen-test` is the standard test runner for `#[wasm_bindgen_test]`
# macros on `wasm32-unknown-unknown`. It is gated on `target_arch = "wasm32"`
# so native `cargo test` does not pull it in.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# ============================================================================
# Benchmarks (issue #1 item 11)
# ============================================================================
#
# `cargo bench --features full` runs the four benchmark groups on native.
# `cargo bench --target wasm32-unknown-unknown --features full,wasm` is the
# WASM equivalent (requires the `wasm-bindgen` feature on `criterion` — see
# the commented-out dev-dep line above + `benches/README.md`).
#
# The benches exercise `GrafeoLoroApp`, `apply_node_batch`, `hydrate_grafeo`,
# and `LoroOp::TreeMove` — all of which require the `full` feature set
# (`grafeo` is native-only today; see `benches/README.md` for the WASM story).

[[bench]]
name = "core"
harness = false
required-features = ["full"]

# ============================================================================
# WASM target configuration
# ============================================================================
#
# When targeting `wasm32-unknown-unknown`, the `tokio`-backed `batcher`
# feature MUST be off (tokio::sync::mpsc cannot run in browser WASM). The
# trait-abstracted `Mailbox` (issue #1 item 2) is the WASM-compatible path.

[lib]
name = "grafeo_loro"
path = "src/lib.rs"
# Issue #4: `crate-type = ["cdylib", "rlib"]` so `wasm-pack build` works
# directly on the main crate (previously only the `examples/wasm-offline-
# queue` sub-crate declared `cdylib`). The `rlib` is still produced for
# ordinary `cargo build` / `cargo test` consumers; `cdylib` is what
# `wasm-pack` consumes to produce the `.wasm` + JS bindings.
crate-type = ["cdylib", "rlib"]

# ============================================================================
# WASM package metadata (issue #3 sub-issue 1)
# ============================================================================
# Binaryen 120 `wasm-opt` crashes on LLVM 19 features (`i64.trunc_sat_f64_*`,
# bulk-memory) emitted by default in `wasm-pack` release profiles. Pin the
# enabled features to the wasm-opt 120 subset so pre-optimized `.wasm` ships
# without crashing downstream `wasm-opt` runs.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--enable-nontrapping-float-to-int",
  "--enable-bulk-memory",
  "--strip-debug",
]

# ============================================================================
# CI matrix (issue #1 item 7) — what `cargo build` combinations must pass:
# ============================================================================
#
#   cargo build --no-default-features
#   cargo build --no-default-features --features bridge
#   cargo build --no-default-features --features bridge,batcher,compression,tree
#   cargo build --no-default-features --features full
#   cargo build --target wasm32-unknown-unknown --no-default-features --features bridge,compression,tree,wasm
#   cargo build --target wasm32-wasi --no-default-features --features bridge,compression,tree
