[package]
name = "grafeo-loro-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
grafeo-loro = { path = ".." }
# Pinned per P6-DEVIL C5.4 — libfuzzer-sys 0.4 matches the `fuzz_target!` macro signature used in consistency.rs.
# Do NOT use 0.13 (different macro signature).
libfuzzer-sys = "0.4"
# Pinned per P6-DEVIL C5.4 — arbitrary 1.3+ derive macro for FuzzInput.
arbitrary = { version = "1.3", features = ["derive"] }
# Required for LoroDoc construction in the fuzz harness.
loro = "1.0"
# Required for GrafeoDB construction + session API.
grafeo = "0.5"
grafeo-common = "0.5"
# Required for the I3b/I5/I10 invariant checks which spawn a tokio runtime.
# `rt` feature for `Builder::new_current_thread()`, `time` for `sleep`.
tokio = { version = "1", features = ["rt", "time", "sync"] }
# Required for parking_lot::RwLock (epoch side-channel set + BridgeMaps).
parking_lot = "0.12"
# Required for the I15 presence envelope integrity check (serde_json round-trip).
serde_json = "1"

[lints.rust]
# `cfg(fuzzing)` is set by `cargo +nightly fuzz run` (via cargo-fuzz). Without this
# check-cfg declaration, rustc warns about an "unexpected cfg condition name" during
# plain `cargo check` (which doesn't set `cfg(fuzzing)`).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lib]
path = "fuzz_targets/lib.rs"

[[bin]]
name = "consistency"
path = "fuzz_targets/consistency.rs"
test = false
doc = false

# P6-L3-T5 (Q5): seed corpus generator. Produces 5 deterministic `.bin` files
# in `fuzz/corpus/consistency/` matching the 5 scenarios documented in
# `docs/phase-6/fuzz-invariants.md` (empty, single_upsert, all_variants,
# cycle_attempt, large_batch). Run via:
#   cargo run --bin gen_corpus --manifest-path fuzz/Cargo.toml
[[bin]]
name = "gen_corpus"
path = "fuzz_targets/gen_corpus.rs"
test = false
doc = false
