[package]
name = "wasm-offline-queue-example"
version = "0.4.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grafeo-loro = { path = "../..", default-features = false, features = ["bridge", "tree", "wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Disable wasm-opt (binaryen) — it's not installed in the CI sandbox and
# is purely an optimization step (not required for QA correctness). The
# main crate's Cargo.toml has the full wasm-opt config for production
# release builds where binaryen IS available.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# ============================================================================
# Issue #4 secondary finding #2: fail-loud feature stubs from a downstream
# consumer perspective.
# ============================================================================
#
# Uncomment any of the three feature lines below to verify the
# `compile_error!` in `grafeo-loro/src/lib.rs` fires when a downstream
# consumer attempts to enable an invented feature name. Expected message:
#
#   error: grafeo-loro has no `merge` feature. To merge two LoroDocs,
#   call `doc.import(other_doc.export(loro::ExportFormat::Snapshot))`.
#
# (Similarly for `awareness` and `persistence`.)
#
# [features]
# merge = ["grafeo-loro/merge"]
# awareness = ["grafeo-loro/awareness"]
# persistence = ["grafeo-loro/persistence"]
